[project]
name = "ebms"
version = "0.1.0"
description = "Library to train energy-based models on toy distributions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.2.36",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.4",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebms"]

[tool.ruff]
ignore = ["F722"] # ignores forward annotation error in jaxtyping
